--- a/CBL/Makefile
+++ b/CBL/Makefile
@@ -52,7 +52,8 @@ $(BASE_LIB):	$(BASE_LIB)_objs
 		$(BASE_BUILD_PATH)/Queue.o \
 		$(BASE_BUILD_PATH)/Stack.o \
 		$(BASE_BUILD_PATH)/HashTable.o \
-		$(BASE_BUILD_PATH)/Btree.o
+		$(BASE_BUILD_PATH)/Btree.o \
+		$(BASE_BUILD_PATH)/Tree.o
 
 #编译Base
 $(BASE_LIB)_objs:
@@ -61,6 +62,7 @@ $(BASE_LIB)_objs:
 	$(CC) $(CFLAGS) -fPIC -c $(BASE_SRC)/Stack.c -o $(BASE_BUILD_PATH)/Stack.o
 	$(CC) $(CFLAGS) -fPIC -c $(BASE_SRC)/HashTable.c -o $(BASE_BUILD_PATH)/HashTable.o
 	$(CC) $(CFLAGS) -fPIC -c $(BASE_SRC)/Btree.c -o $(BASE_BUILD_PATH)/Btree.o
+	$(CC) $(CFLAGS) -fPIC -c $(BASE_SRC)/Tree.c -o $(BASE_BUILD_PATH)/Tree.o
 
 ################################################################################
 #链接Test
